Fix Bug 1177571: Standardize and variablize item spacing
Also fix bug 1177223.

--- a/media/stylus/base/elements/forms.styl
+++ b/media/stylus/base/elements/forms.styl
@@ -15,7 +15,7 @@ input, button, textarea, select, optgroup, option {
 input[type=text], input[type=password], input[type=search], input[type=email], input[type=url], textarea {
     background: #fff;
     border: 1px solid #cbc8b9;
-    padding: 6px 8px;
+    padding: $content-vertical-spacing $content-horizontal-spacing;
 }
 
 input[type='search'] {
