--- a/media/stylus/components/components.styl
+++ b/media/stylus/components/components.styl
@@ -55,7 +55,7 @@
         a {
             set-smaller-font-size();
             display: block;
-            padding: $list-item-spacing $grid-spacing;
+            padding: $content-vertical-spacing $grid-spacing;
         }
 
         .toggleable {
