--- a/media/stylus/components/home/home-demos.styl
+++ b/media/stylus/components/home/home-demos.styl
@@ -60,7 +60,7 @@ demos section and carousel
         border: 6px solid #fff;
         display: block;
         box-shadow: 2px 2px 1px rgba(0 , 0, 0, .1);
-        margin-bottom: 6px;
+        margin-bottom: $content-vertical-spacing;
         width: 180px;
         height: 133px;
     }
