--- a/media/stylus/components/wiki/reviews.styl
+++ b/media/stylus/components/wiki/reviews.styl
@@ -8,7 +8,11 @@
         margin: 0;
     }
 
+    ul {
+        padding-bottom: $content-vertical-spacing;
+    }
+
     li {
-        padding-top: $list-item-spacing;
+        padding-top: $content-vertical-spacing;
     }
 }
