--- a/media/stylus/dashboards.styl
+++ b/media/stylus/dashboards.styl
@@ -74,7 +74,7 @@
     #page-buttons {
         li {
             display: inline-block;
-            margin-right: $list-item-spacing;
+            margin-right: $content-horizontal-spacing;
         }
     }
 }
@@ -86,7 +86,7 @@
     }
     label {
         display: inline-block;
-        margin-right: $list-item-spacing;
+        margin-right: $content-horizontal-spacing;
     }
     .revision-field {
         display: inline-block;
